<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">一起玩单词</string>
    <string name="action_settings">设置</string>
    <string name="content_description">图片描述</string>
    <string name="account">账户</string>
    <string name="enter_username">请输入邮箱地址</string>
    <string name="password">密码</string>
    <string name="repeatpassword">确认密码</string>
    <string name="enter_password">请输入密码</string>
    <string name="remember_info">记住登录信息</string>
    <string name="set_username">常用邮箱</string>
    <string name="set_password">六位密码</string>
    <string name="confirm_password">重新输入</string>
    <string name="nickname">昵称</string>
    <string name="set_nickname">起个名字</string>
    <string name="remember_account_password">记住密码</string>
    <string name="mypk">我的比赛</string>
    <string name="myword">我的生词</string>
    <string name="myscore">我的成绩</string>
    <string name="mycard">我的名片</string>
    <string name="temp_open_state">我是启动页，1500ms后跳转</string>
    <string name="temp_login">登录</string>
    <string name="temp_register">注册</string>
    <string name="toast_quit_app">再按一次返回将退出程序</string>
    <string name="offline">离线模式</string>
    <string name="online">在线模式</string>
    <string name="temp_offline">我是离线模式，我还没有漂漂的界面</string>
    <string name="temp_online">我是在线模式，快点来打扮我!</string>
    <string name="online_choose">请选择性别</string>
    <string name="temp_Book">我是单词本，快点来打扮我!</string>
    <string name="game_begin">开始游戏</string>
    <string name="PVE">群K</string>
    <string name="PVP">对K</string>
    <string name="temp_mode">我是模式，点我</string>
    <string name="temp_english">hello</string>
    <string name="temp_chinese">你好</string>
    <string name="game_continue">邀请继续</string>
    <string name="game_share">分享战绩</string>
    <string name="game_exchange">换个对手</string>
    <string name="game_seerank">查看排行</string>
    <string name="game_cet4">四级对战</string>
    <string name="game_toefl">托福对战</string>
    <string name="game_cet6">六级对战</string>
    <string name="game_ielts">雅思对战</string>
    <string name="game_gre">gre对战</string>
    <string name="game_more">更多对战</string>
    <string name="game_vs">vs</string>
    <string name="temp_username1">江小鱼</string>
    <string name="temp_username2">琵琶公主</string>
    <string name="temp_find_user">六级对战！正在为你匹配对手…</string>
    <string name="temp_loadgame">匹配对手完成，载入中…</string>

</resources>