<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >
<ImageView
        android:id="@+id/pvp_load_bluebar_up"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        
        android:src="@drawable/bg_blue_bar" 
        android:contentDescription="@string/content_description"/>

<ImageView
        android:id="@+id/pvp_game_load_user1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        
        android:layout_below="@+id/pvp_load_bluebar_up"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="190dp"
        
        android:src="@drawable/pvp_game_ic_boy" 
        android:contentDescription="@string/content_description"/>
<TextView 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        
        android:layout_below="@+id/pvp_load_bluebar_up"
        android:layout_marginTop="35dp"
        android:layout_toRightOf="@+id/pvp_game_load_user1"
        
        android:paddingLeft="15dp" 
        
        android:text="@string/game_vs"
        android:textColor="@color/red" 
        android:textSize="30sp"
        android:gravity="center"/>

<TextView 
    	android:id="@+id/pvp_game_load_user1name"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        
        android:layout_below="@+id/pvp_game_load_user1"
        android:layout_alignLeft="@+id/pvp_game_load_user1"
        
        android:text="@string/temp_username1"
        android:textSize="13sp"
        android:gravity="center"
        android:textColor="#1d1d1d" />

<TextView 
        android:id="@+id/pvp_game_load_user2name"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        
        android:layout_below="@+id/pvp_game_load_user2"
        android:layout_alignLeft="@+id/pvp_game_load_user2"
        
        android:text="@string/temp_username2"
        android:textSize="13sp"
        android:gravity="center"
        android:textColor="#1d1d1d" 
        android:visibility="invisible"/>

<ImageView
        android:id="@+id/pvp_game_load_user2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        
        android:layout_below="@+id/pvp_load_bluebar_up"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/pvp_game_load_user1"
        android:layout_marginLeft="70dp"
        
        android:src="@drawable/pvp_game_ic_girl" 
        android:visibility="invisible"
        android:contentDescription="@string/content_description"/>


    <ProgressBar
        android:id="@+id/pvp_load_progress"
        android:layout_width="400dp"
        android:layout_height="13dp"
        
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"

        style="?android:attr/progressBarStyleHorizontal"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/progress_bar"
        android:background="@drawable/rectangle" />
    
    <TextView 
        android:id="@+id/pvp_game_load_finduser"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/pvp_load_progress"
        android:layout_marginTop="10dp"
        
        android:text="@string/temp_find_user"
        android:textSize="13sp"
        android:gravity="center"
        android:textColor="@color/red" />
    
    <TextView 
        android:id="@+id/pvp_game_load_loadgame"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/pvp_load_progress"
        android:layout_marginTop="10dp"
        
        android:text="@string/temp_loadgame"
        android:textSize="13sp"
        android:gravity="center"
        android:textColor="@color/red" 
        android:visibility="invisible"/>
        
    
<ImageView
        android:id="@+id/pvp_load_bluebar_down"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        
        android:src="@drawable/bg_blue_bar" 
        android:contentDescription="@string/content_description"/>
</RelativeLayout>
