<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/white">
    
	<ImageView
        android:id="@+id/pvp_book_bluebar_up"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        
        android:src="@drawable/bg_blue_bar" 
        android:contentDescription="@string/content_description"/>
    
    <ImageView
       android:id="@+id/pvp_book_tixiao_single"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       
       android:layout_alignParentRight="true"
       android:layout_below="@+id/pvp_book_bluebar_up"
       android:layout_marginRight="90dp"
       android:layout_marginTop="10dp"
       
       android:contentDescription="@string/content_description"
       android:src="@drawable/bg_tixiao_single" />
    
<!--     四级对战 -->
     <ImageView
       android:id="@+id/pvp_book_ic_cet4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       
       android:layout_below="@+id/pvp_book_tixiao_single"
       android:layout_alignLeft="@+id/pvp_book_tixiao_single"
       android:layout_marginTop="10dp"
       android:layout_marginLeft="-60dp"
       
       android:contentDescription="@string/content_description"
       android:src="@drawable/ic_questionbank" />
     
    <TextView 
      android:id="@+id/pvp_book_cet4_text"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      
      android:layout_below="@+id/pvp_book_tixiao_single"
      android:layout_toRightOf="@+id/pvp_book_ic_cet4"
      android:layout_marginTop="15dp"
        	
      android:paddingLeft="15dp" 
      android:background="@drawable/register_rectangle"
      android:text="@string/game_cet4" 
      android:gravity="center"
      android:textColor="#1d1d1d" />
         
     <Button
         android:id="@+id/pvp_book_cet4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         
         android:layout_alignBottom="@+id/pvp_book_ic_cet4"
         android:layout_alignRight="@+id/pvp_book_cet4_text"
         android:layout_below="@+id/pvp_book_tixiao_single"
         android:layout_marginTop="15dp"
         android:layout_toRightOf="@+id/pvp_book_ic_cet4"
         android:background="@null" 
         android:onClick="goPVPLoad"/>
        
<!--     托福对战 -->     
    <ImageView
       android:id="@+id/pvp_book_ic_toefl"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       
       android:layout_below="@+id/pvp_book_tixiao_single"
       android:layout_toRightOf="@+id/pvp_book_cet4_text"
       android:layout_marginTop="10dp"
       
       android:contentDescription="@string/content_description"
       android:src="@drawable/ic_questionbank_dark" />
          
   <TextView 
      android:id="@+id/pvp_book_toefl_text"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      
      android:layout_below="@+id/pvp_book_tixiao_single"
      android:layout_toRightOf="@+id/pvp_book_ic_toefl"
      android:layout_marginTop="15dp"
        	
      android:paddingLeft="15dp" 
      android:background="@drawable/register_rectangle"
      android:text="@string/game_toefl" 
      android:gravity="center"
      android:textColor="#1d1d1d" />
   
   <Button
       android:id="@+id/pvp_book_toefl"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/pvp_book_cet6_text"
       android:layout_alignRight="@+id/pvp_book_gre"
       android:layout_below="@+id/pvp_book_tixiao_single"
       android:layout_marginTop="15dp"
       android:layout_toRightOf="@+id/pvp_book_ic_toefl"
       android:background="@null" 
       android:onClick="goPVPLoad"/>
     
    <!--  六级对战 -->
         <ImageView
       android:id="@+id/pvp_book_ic_cet6"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       
       android:layout_below="@+id/pvp_book_ic_cet4"
       android:layout_alignLeft="@+id/pvp_book_tixiao_single"
       android:layout_marginTop="10dp"
       android:layout_marginLeft="-60dp"
       
       android:contentDescription="@string/content_description"
       android:src="@drawable/ic_questionbank" />
     
    <TextView 
      android:id="@+id/pvp_book_cet6_text"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      
      android:layout_below="@+id/pvp_book_ic_cet4"
      android:layout_toRightOf="@+id/pvp_book_ic_cet6"
      android:layout_marginTop="15dp"
        	
      android:paddingLeft="15dp" 
      android:background="@drawable/register_rectangle"
      android:text="@string/game_cet6" 
      android:gravity="center"
      android:textColor="#1d1d1d" />
         
     <Button
         android:id="@+id/pvp_book_cet6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         
         android:layout_alignBottom="@+id/pvp_book_ic_cet6"
         android:layout_alignRight="@+id/pvp_book_cet6_text"
         android:layout_below="@+id/pvp_book_ic_cet4"
         android:layout_marginTop="15dp"
         android:layout_toRightOf="@+id/pvp_book_ic_cet6"
         android:background="@null" 
         android:onClick="goPVPLoad"/>
     
     <!-- gre对战 -->
     <ImageView
       android:id="@+id/pvp_book_ic_gre"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       
       android:layout_below="@+id/pvp_book_ic_toefl"
       android:layout_toRightOf="@+id/pvp_book_cet6_text"
       android:layout_marginTop="10dp"
       
       android:contentDescription="@string/content_description"
       android:src="@drawable/ic_questionbank_dark" />
          
   <TextView 
      android:id="@+id/pvp_book_gre_text"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      
      android:layout_below="@+id/pvp_book_ic_toefl"
      android:layout_toRightOf="@+id/pvp_book_ic_gre"
      android:layout_marginTop="15dp"
        	
      android:paddingLeft="15dp" 
      android:background="@drawable/register_rectangle"
      android:text="@string/game_gre" 
      android:gravity="center"
      android:textColor="#1d1d1d" />
   
   <Button
       android:id="@+id/pvp_book_gre"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/pvp_book_ic_gre"
       android:layout_alignRight="@+id/pvp_book_more_text"
       android:layout_below="@+id/pvp_book_ic_toefl"
       android:layout_marginTop="15dp"
       android:layout_toRightOf="@+id/pvp_book_ic_gre"
       android:background="@null"
       android:onClick="goPVPLoad" />
      
  <!--  雅思对战 -->
           <ImageView
       android:id="@+id/pvp_book_ic_ielts"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       
       android:layout_below="@+id/pvp_book_ic_cet6"
       android:layout_alignLeft="@+id/pvp_book_tixiao_single"
       android:layout_marginTop="10dp"
       android:layout_marginLeft="-60dp"
       
       android:contentDescription="@string/content_description"
       android:src="@drawable/ic_questionbank_dark" />
     
    <TextView 
      android:id="@+id/pvp_book_ielts_text"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      
      android:layout_below="@+id/pvp_book_ic_cet6"
      android:layout_toRightOf="@+id/pvp_book_ic_ielts"
      android:layout_marginTop="15dp"
        	
      android:paddingLeft="15dp" 
      android:background="@drawable/register_rectangle"
      android:text="@string/game_ielts" 
      android:gravity="center"
      android:textColor="#1d1d1d" />
         
     <Button
         android:id="@+id/pvp_book_ielts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         
         android:layout_alignBottom="@+id/pvp_book_ic_ielts"
         android:layout_alignRight="@+id/pvp_book_ielts_text"
         android:layout_below="@+id/pvp_book_ic_cet6"
         android:layout_marginTop="15dp"
         android:layout_toRightOf="@+id/pvp_book_ic_ielts"
         android:background="@null" 
         android:onClick="goPVPLoad"/>
     
   <!--   更多秘籍 -->
   <ImageView
       android:id="@+id/pvp_book_ic_more"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       
       android:layout_below="@+id/pvp_book_ic_gre"
       android:layout_toRightOf="@+id/pvp_book_cet6_text"
       android:layout_marginTop="10dp"
       
       android:contentDescription="@string/content_description"
       android:src="@drawable/ic_questionbank" />
          
   <TextView 
      android:id="@+id/pvp_book_more_text"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      
      android:layout_below="@+id/pvp_book_ic_gre"
      android:layout_toRightOf="@+id/pvp_book_ic_more"
      android:layout_marginTop="15dp"
        	
      android:paddingLeft="15dp" 
      android:background="@drawable/register_rectangle"
      android:text="@string/game_more" 
      android:gravity="center"
      android:textColor="#1d1d1d" />
   
   <Button
       android:id="@+id/pvp_book_more"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/pvp_book_ielts"
       android:layout_alignRight="@+id/pvp_book_more_text"
       android:layout_below="@+id/pvp_book_ic_gre"
       android:layout_marginTop="15dp"
       android:layout_toRightOf="@+id/pvp_book_ic_more"
       android:background="@null"
       android:onClick="goPVPLoad" />
   
   <ImageView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    
	    android:layout_alignParentLeft="true"
	    android:layout_below="@+id/pvp_book_cet4"
        android:layout_marginLeft="30dp"
        
        android:src="@drawable/ic_warrior" 
        android:contentDescription="@string/content_description"
	    />
   
    <ImageView
        android:id="@+id/pvp_book_bluebar_down"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        
        android:src="@drawable/bg_blue_bar" 
        android:contentDescription="@string/content_description"/>

</RelativeLayout>
