<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/pvp_mode_bluebar_up"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        
        android:src="@drawable/bg_blue_bar" 
        android:contentDescription="@string/content_description"/>
    
    <ImageView
       android:id="@+id/pvp_mode_tixiao_single"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       
       android:layout_alignParentRight="true"
       android:layout_below="@+id/pvp_mode_bluebar_up"
       android:layout_marginRight="10dp"
       android:layout_marginTop="10dp"
       
       android:contentDescription="@string/content_description"
       android:src="@drawable/bg_tixiao_single" />
       
    
    <TextView 
      android:id="@+id/pvp_mode_choose_sex"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      
      android:layout_below="@+id/pvp_mode_tixiao_single"
      android:layout_alignRight="@+id/pvp_mode_tixiao_single"
      android:layout_alignLeft="@+id/pvp_mode_tixiao_single"
      android:layout_marginTop="20dp"
        	
      android:paddingLeft="15dp" 
      android:background="@drawable/register_rectangle"
      android:text="@string/online_choose" 
      android:gravity="center"
      android:textColor="#1d1d1d" />
     
    <Button 
      android:id="@+id/pvp_mode_girl" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      
      android:layout_below="@+id/pvp_mode_choose_sex"
	  android:layout_alignRight="@+id/pvp_mode_choose_sex"
	  android:layout_marginTop="10dp"
      
      android:background="@drawable/ic_girl_dark" 
      android:onClick="clickGirl" /> 
      
   <Button 
      android:id="@+id/pvp_mode_boy" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      
      android:layout_below="@+id/pvp_mode_choose_sex"
	  android:layout_alignLeft="@+id/pvp_mode_choose_sex"
	  android:layout_marginTop="10dp"
      
      android:background="@drawable/ic_boy_dark"
      android:onClick="clickBoy" /> 
      
    <TextView 
      android:id="@+id/pvp_mode_begin"
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      
      android:layout_below="@+id/pvp_mode_girl"
      android:layout_alignRight="@+id/pvp_mode_tixiao_single"
      android:layout_alignLeft="@+id/pvp_mode_tixiao_single"
      android:layout_marginTop="10dp"
        	
      android:paddingLeft="15dp" 
      android:background="@drawable/register_rectangle"
      android:text="@string/game_begin" 
      android:gravity="center"
      android:textColor="#1d1d1d" />

    <Button 
      android:id="@+id/pvp_mode_beginbutton" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      
	  android:layout_below="@+id/pvp_mode_girl"
      android:layout_alignRight="@+id/pvp_mode_tixiao_single"
      android:layout_alignLeft="@+id/pvp_mode_tixiao_single"
      android:layout_marginTop="10dp"
      
      android:background="@null"
      android:onClick="goChooseBook" /> 
      
	<ImageView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    
	    android:layout_alignParentLeft="true"
	    android:layout_alignBottom="@id/pvp_mode_begin"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        
        android:src="@drawable/ic_warrior" 
        android:contentDescription="@string/content_description"
	    />
	
    <ImageView
        android:id="@+id/pvp_mode_bluebar_down"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        
        android:src="@drawable/bg_blue_bar" 
        android:contentDescription="@string/content_description"/>
    
</RelativeLayout>